<resources>
    <string name="app_name">Movies Catalogue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_fragment">Movies</string>
    <string name="shows_fragment">Shows</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="filter">Filter</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title">Title</string>
    <string name="movies_image">Movies Image</string>
    <string name="overview">Overview</string>
    <string name="production">Production</string>
    <string name="season">Season</string>
    <string name="okay">Okay</string>
    <string name="release_s">Release : %s</string>
    <string name="release_date">Release Date</string>
    <string name="movies_score">Movies Score</string>
    <string name="score_s">Score: %s</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="no_production">No Data Production</string>
    <string name="no_season">No Data Season</string>
    <string name="delete_all_movies">"Delete All Favorite Movies?"</string>
    <string name="delete_all_shows">"Delete All Favorite Shows?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="genre_type">Genre</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="war">War</string>
    <string name="music">Music</string>
    <string name="family">Family</string>
    <string name="release_year">Release Year</string>
    <string name="_2020">2020</string>
    <string name="_2019">2019</string>
    <string name="_2018">2018</string>
    <string name="_2017">2017</string>
    <string name="_2016">2016</string>
    <string name="_2015">2015</string>
    <string name="_2014">2014</string>
    <string name="_100">100</string>
    <string name="apply">Apply</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="kids">Kids</string>
    <string name="politics">Politics</string>
    <string name="mystery">Mystery</string>
    <string name="detail_image_movies">Detail Image Movies</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_average">Vote Average</string>
    <string name="action_image_view">Action Image View</string>
    <string name="animation_image_view">Animation Image View</string>
    <string name="crime_image_view">Crime Image View</string>
    <string name="history_image_view">History Image View</string>
    <string name="horror_image_view">Horror Image View</string>
    <string name="romance_image_view">Romance Image View</string>
    <string name="war_image_view">War Image View</string>
    <string name="music_image_view">Music Image View</string>
    <string name="family_image_view">Family Image View</string>
    <string name="comedy_image_view">Comedy Image View</string>
    <string name="homepage">homepage</string>
    <string name="production_image">Production Image</string>
    <string name="name">Name</string>
    <string name="detail_image_shows">Detail Image Shows</string>
    <string name="favorite">Favorite</string>
    <string name="state_true">Success Added to favorite</string>
    <string name="state_false">Success Deleted from favorite</string>
    <string name="undo">Undo</string>
    <string name="no_data_favorite">No Data Favorite</string>
    <string name="no_data_movies">Movies Not Found !!</string>
    <string name="no_data_shows">Shows Not Found !!</string>
    <string name="no_favorite">Data Not Found</string>
    <string name="delete_from_favorite">Delete From Favorite</string>
    <string name="search_icon">Search Icon</string>
    <string name="title_favorite">Favorite</string>
    <string name="upcoming">Upcoming</string>
</resources>