<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/genre_text_shows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/genre_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/genre_type_scroll_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_text_shows">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genre_chip_group_shows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/action_chip_shows"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/action_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/animation_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animation" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/comedy_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comedy" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/crime_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crime" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/documentary_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documentary" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/drama_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drama" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/kids_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kids" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/politics_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politics" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/mystery_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mystery" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/family_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/year_text_shows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/release_year"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_type_scroll_shows" />

    <HorizontalScrollView
        android:id="@+id/year_scroll_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text_shows">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                style="@style/CustomChipStyle"
                android:id="@+id/year_chip_group_shows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/twenty_twenty_chip_shows"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_twenty_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2020" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_nineteen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2019" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_eighteen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2018" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_seventeen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2017" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_sixteen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2016" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_fifteen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2015" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/twenty_fourteen_chip_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2014" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn_shows"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_scroll_shows" />

</androidx.constraintlayout.widget.ConstraintLayout>