<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightGray"
    tools:context=".main.movies.MoviesFragment">

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/movies_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_recycler_item_count="3"
        app:shimmer_recycler_layout="@layout/placeholder_row_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/movies_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/filter"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_filter"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/error_img_view_movies"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:contentDescription="@string/error"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:srcCompat="@drawable/ic_sad" />

    <TextView
        android:id="@+id/error_text_view_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:text="@string/no_internet_connection"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/error_img_view_movies"
        app:layout_constraintStart_toStartOf="@+id/error_img_view_movies"
        app:layout_constraintTop_toBottomOf="@+id/error_img_view_movies" />

</androidx.constraintlayout.widget.ConstraintLayout>
